# OceansOfThings

./: err.txt
IoT_App/CustomPipe/: config.xml  package.json
IoT_App/CustomPipe/src/app/: app.module.ts
IoT_App/CustomPipe/src/utils/: custom-pipe.ts
IoT_App/LeftRightMenu/: config.xml  ionic.config.json  package.json
IoT_App/LeftRightMenu/src/app/: app.component.ts  app.html  app.scss
IoT_App/MyFormValidation/: config.xml  package.json
IoT_App/MyFormValidation/src/app/: app.module.ts  app.scss
IoT_App/MyFormValidation/src/services/: myform.ts
IoT_App/MyIonicInputDirective/: config.xml  package.json
IoT_App/MyIonicInputDirective/src/app/: app.module.ts
IoT_App/MyIonicInputDirective/src/directives/: my-ionic-input.ts
IoT_App/MyRestbackend/: config.xml  ionic.config.json  package.json
IoT_App/Navigation/: config.xml  ionic.config.json  package.json
IoT_App/Navigation/src/app/: app.module.ts
IoT_App/PagesAndTabs/: config.xml  ionic.config.json  package.json
IoT_App/PizzaApp/: config.xml  ionic.config.json  package.json
IoT_App/SharedService/: config.xml  package.json
IoT_Gateway/AzureClient/: .CMakeLists.txt.swp  CMakeLists.txt  iothub_client_sample_mqtt.c
IoT_Gateway/Repeater/: .swp  client-pub.js  dump.rdb  gulpfile.js  index.js  models.js  nodeBroker.sh  package.json  startRedisServer.sh  test.js
IoT_Gateway/Repeater/NodeMQTT/: gulpfile.js  index.js  models.js  test.js
IoT_MQTT/Paho_MQTT_Unit_Test/: CMakeLists.txt  mqtt_callback.cpp  mqtt_callback.h  sample_mem_persistence.cpp  sample_mem_persistence.h  unit-test.cpp
IoT_MQTT/Paho_MQTT_Unit_Test/NodeMQTT/: client-pub.js  client-sub.js  nodeBroker.sh
IoT_MQTT/Paho_MQTT_Unit_Test_Async/: action_listener.cpp  action_listener.h  callbackAsyncPublish.cpp  callbackAsyncPublish.h  delivery_action_listener.cpp  delivery_action_listener.h  unit-test.cpp
IoT_Node/: .unit_testing_IoT.cpp.swp  .ycm_extra_conf.py  CMakeLists.txt  base64.cpp  base64.h  iot_node.cpp  iot_node.h  mygraph.dot  unit_testing_IoT.cpp
IoT_Node/communication/serial/: AsyncSerial.cpp  AsyncSerial.h  BufferedAsyncSerial.cpp  BufferedAsyncSerial.h  CMakeLists.txt  CallbackAsyncSerial.cpp  CallbackAsyncSerial.h  unit-test.cpp  unit-test.cppx
IoT_Node/communication/serial/portSimulator/: portSimulator.sh
IoT_Node/connectivity/mqtt/: dump.rdb  mqtt_endpoint.cpp  mqtt_endpoint.h  mygraph.dot  unit-test.cppx
IoT_Node/connectivity/mqtt/NodeMQTT/: mosca-app.js
IoT_Node/connectivity/mqtt/Paho_MQTT_Unit_Test/: unit-test.cpp
IoT_Node/connectivity/mqtt/Paho_MQTT_Unit_Test_Async/: CMakeLists.txt  unit-test.cpp  unit-test.cppx
IoT_Node/connectivity/mqtt/lib_x64/MQTT/Paho_c/: libpaho-mqtt3as.so.SOVERSION
IoT_Node/connectivity/mqtt/lib_x64/MQTT/Paho_cpp/: libmqttpp.so.0.1
IoT_Node/connectivity/mqtt/lib_x86/MQTT/Paho_c/: MQTTVersion  libpaho-mqtt3a.so.1.0
IoT_Node/databases/SQLite/: sqlite3_NMEA.c
IoT_Node/include/boost/smart_ptr/: .shared_ptr.hpp.swp
IoT_Node/include/png/libpng15/: pnglibconf.h
IoT_Node/lib_ARM32/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
IoT_Node/lib_ARM32/jpeg/: libjpeg.la  libjpeg.so.9
IoT_Node/lib_ARM32/jpeg/8/: libjpeg.la  libjpeg.so.8.0.0
IoT_Node/lib_ARM32/mqtt/: libpaho-mqtt3a.so.1
IoT_Node/lib_ARM32/raspicam/: libraspicam.so.0.1.2
IoT_Node/lib_i86/: libraspicam.so.0.1.2
IoT_Node/lib_i86/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
IoT_Node/lib_i86/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
IoT_Node/lib_i86/jpeg/: libjpeg.la  libjpeg.so.8.0.0
IoT_Node/lib_i86/png/: libpng.so.3.57.0  libpng12.la  libpng12.so.0.57.0
IoT_Node/lib_i86/png/pkgconfig/: libpng12.pc
IoT_Node/lib_x64/googlemock/: cmake_install.cmake
IoT_Node/lib_x64/googlemock/gtest/: CTestTestfile.cmake  cmake_install.cmake
IoT_Node/lib_x64/jpeg/: libjpeg.la  libjpeg.so.8.0.0
IoT_Node/lib_x64/mqtt/: libpaho-mqtt3a.so.1.0
IoT_Node/lib_x64/mttq/: libmqttpp.so.0.1
IoT_Node/lib_x64/raspicam/: libraspicam.so.0.1.2
IoT_Node/sensors/: iot_sensor_factory.cpp  iot_sensor_factory.h  sensor.cpp  sensor.h  sensor_factory.cpp  sensor_factory.h
IoT_Node/sensors/GPS/: CMakeLists.txt  NMEA_0183_sensor.cpp  NMEA_0183_sensor.h  unit-test.cpp  unit-test.cppx
IoT_Node/sensors/GPS/NMEA_0183/: CMakeLists.txt  unit_test_NMEA_0183.cpp
IoT_Node/sensors/GPS/NMEA_0183/SQLite/: CMakeLists.txt  sqlite3_NMEA.h  test.db
IoT_Node/sensors/GPS/NMEA_0183/gpgga/: gpgga.c  gpgga.h  unit-test.cpp
IoT_Node/sensors/GPS/NMEA_0183/gpgll/: CMakeLists.txt  gpgll.c  gpgll.h
IoT_Node/sensors/GPS/NMEA_0183/gprmc/: gprmc.c  unit-test.cpp
IoT_Node/sensors/GPS/NMEA_0183/lib_x64/googlemock/: Makefile
IoT_Node/sensors/GPS/NMEA_0183/lib_x64/googlemock/gtest/: Makefile
IoT_Node/sensors/GPS/NMEA_0183/lib_x86/googlemock/: Makefile
IoT_Node/sensors/GPS/NMEA_0183/lib_x86/googlemock/gtest/: CTestTestfile.cmake
IoT_Node/sensors/GPS/NMEA_0183/src/: hash.h  nmea.c  parser_types.h
IoT_Node/sensors/GPS/NMEA_0183/src_original/nmea/: load_parser.c
IoT_Node/sensors/GPS/portSimulator/: GPS_data.txt  portSimulator.sh
IoT_Node/sensors/camera/: camera_NoIr_V2.cpp  camera_NoIr_V2.h  fake_camera.cpp  fake_camera.h
IoT_Server/MQTT_REST/: mosca-app.js  nodeBroker.sh
IoT_Server/MongoDB/: .models.js.swp  NMEA_0183.js  README.md  gulpfile.js  index.js  models.js  package.json  test.js
IoT_Server/NodeMQTT/: client-pub.js  client-sub.js  mosca-app.js  nodeBroker.sh  package.json
IoT_Server/RESTFull/: package.json  server.js
IoT_Server/Telegram/: index.js  package.json
IoT_Server/Twilio/: index.js
NMEA_0183/SQLite/: unit-test.cpp
NMEA_0183/gpgga/: CMakeLists.txt
NMEA_0183/gpgll/: gpgll.h  unit-test.cpp
NMEA_0183/gprmc/: CMakeLists.txt  gprmc.h
NMEA_0183/lib_x64/googlemock/: CTestTestfile.cmake
NMEA_0183/lib_x86/googlemock/: CTestTestfile.cmake  cmake_install.cmake
NMEA_0183/src/: base_sentence.h  hash.c  nmea.c  nmea.h  parse.c  parse.h
NMEA_0183/src_original/nmea/: .nmea.h.swp  load_parser.h  nmea.c
NMEA_0183/src_original/parsers/: parse.c
(+46 files in other folders)
